practice flex box css

--- a/index.html
+++ b/index.html
@@ -7,24 +7,17 @@
   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-  <h1 id="heading1" class="header-class">Heading</h1>
-  <p><b>Bold text</b>This is a paragraph</p>
 
-
-  <div id="div1" class="div-class">
-    <h3>This is division 1</h3>
-    <p>This is division 1 paragraph</p>
-  </div>
-
-  <div id="div2" class="div-class">
-    <h3>This is divison 2</h3>
-    <p>This is division 2 paragraph</p>
+  <div class="container">
     <div>
-      <p>this is inside div2</p>
-      <div>
-        <p>this is inside div2 div</p>
-      </div>
+      <div class="item item-1">Item 1</div>
+      <div class="item item-2">Item 2</div>
     </div>
+    <div>
+      <div class="item item-3">Item 3</div>
+    </div>
+    
+    
   </div>
 
 </body>
