learn basics javascript

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
 
-  <div class="container">
+  <div id="container-id" class="container">
     <div>
-      <div class="item item-1">Item 1</div>
+      <div id="item-1" class="item item-1">Item 1</div>
       <div class="item item-2">Item 2</div>
     </div>
     <div>
       <div class="item item-3">Item 3</div>
     </div>
-    
-    
+    <a href="www.google.com">website link</a>
   </div>
+
 
 </body>
 </html>
