session 04 learn javascript basics

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       </div>
     </div>
   </div>
+  <button id="button-id">Text</button>
+
+  <script src="index.js"></script>
 
 </body>
 </html>
